--- a/Practice2/src/common-component.html
+++ b/Practice2/src/common-component.html
@@ -19,11 +19,11 @@
     <h4>Cards</h4>
     <div class="card">
       <div class="card-body">
-        <h5 class="card-title card-title-primary">SILVER</h5>
+        <h5 class="card-title card-title-primary">Silver</h5>
         <h4 class="card-text-number card-text-number-primary">$49</h4>
-        <h5 class="card-title">YEAR</h5>
+        <h5 class="card-title">Year</h5>
         <p class="card-text card-text-primary">Personal account ....</p>
-        <a href="#" class="btn btn-primary">Purchase</a>
+        <a href="javascript:void(0)" class="btn btn-primary">Purchase</a>
       </div>
     </div>
     <div class="card">
@@ -32,7 +32,7 @@
         <h4 class="card-text-number card-text-number-secondary">$49</h4>
         <h5 class="card-title">YEAR</h5>
         <p class="card-text card-text-secondary">Personal account ....</p>
-        <a href="#" class="btn btn-secondary">Purchase</a>
+        <a href="javascript:void(0)" class="btn btn-secondary">Purchase</a>
       </div>
     </div>
   </div>
@@ -40,16 +40,16 @@
     <h4>Navs</h4>
     <ul class="nav">
       <li class="nav-item">
-        <a class="nav-link" href="#">HOTELS</a>
+        <a class="nav-link" href="javascript:void(0)">Hotels</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">AIRLINES</a>
+        <a class="nav-link" href="javascript:void(0)">Airlines</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">VACATIONS</a>
+        <a class="nav-link" href="javascript:void(0)">Vacation</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">FIND MORE</a>
+        <a class="nav-link" href="javascript:void(0)">Find more</a>
       </li>
     </ul>
   </div>
@@ -61,8 +61,8 @@
     <h4>Grid</h4>
     <div class="container">
         <div class="item">
-          <img src="#" alt="#" class="item-image">
-          <h4 class="item-text-primary">LULU HOFFMAN</h4>
+          <img src="javascript:void(0)" alt="Item" class="item-image">
+          <h4 class="item-text-primary">Lulu Hoffman</h4>
           <p class="item-text-primary">......</p>
           <p class="item-text-secondary">......</p>
         </div>
@@ -71,8 +71,8 @@
   <div>
     <h4>Features Common</h4>
     <div>
-      <img src="#" alt="#" class="item-image-primary">
-      <p class="item-text-primary">RESPONSIVE LAYOUT</p>
+      <img src="javascript:void(0)" alt="Icon" class="item-image-primary">
+      <p class="item-text-primary">Responsive Layout</p>
       <p class="item-text-secondary">..........</p>
     </div>
   </div>
