--- a/Practice2/src/common-component.html
+++ b/Practice2/src/common-component.html
@@ -28,9 +28,9 @@
     </div>
     <div class="card">
       <div class="card-body">
-        <h5 class="card-title card-title-secondary">SILVER</h5>
+        <h5 class="card-title card-title-secondary">Silver</h5>
         <h4 class="card-text-number card-text-number-secondary">$49</h4>
-        <h5 class="card-title">YEAR</h5>
+        <h5 class="card-title">Year</h5>
         <p class="card-text card-text-secondary">Personal account ....</p>
         <a href="javascript:void(0)" class="btn btn-secondary">Purchase</a>
       </div>
