--- a/Practice2/src/common-component.html
+++ b/Practice2/src/common-component.html
@@ -60,20 +60,30 @@
   <div>
     <h4>Grid</h4>
     <div class="container">
-        <div class="item">
-          <img src="javascript:void(0)" alt="Item" class="item-image">
-          <h4 class="item-text-primary">Lulu Hoffman</h4>
-          <p class="item-text-primary">......</p>
-          <p class="item-text-secondary">......</p>
+      <div class="item-container">
+        <div class="item-image">
+          <img src="javascript:void(0)" alt="Item">
         </div>
+        <h4 class="item-text-primary">Lulu Hoffman</h4>
+        <p class="item-text-primary">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi ipsam neque culpa
+          tempora sapiente ab inventore est quod quidem, sint iste autem hic deleniti iusto, perferendis saepe ea!
+          Consequatur, libero.</p>
+        <p class="item-text-secondary">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Adipisci consectetur
+          saepe reiciendis quas fugiat eos aspernatur blanditiis architecto vel ab harum nisi odit ducimus itaque, iure
+          quam quae similique earum!</p>
+      </div>
     </div>
   </div>
   <div>
     <h4>Features Common</h4>
     <div>
-      <img src="javascript:void(0)" alt="Icon" class="item-image-primary">
-      <p class="item-text-primary">Responsive Layout</p>
-      <p class="item-text-secondary">..........</p>
+      <div class="item-image-primary">
+        <img src="javascript:void(0)" alt="Icon">
+      </div>
+      <h4 class="item-text-primary">Responsive Layout</h4>
+      <p class="item-text-secondary">Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi praesentium maiores
+        eligendi quo labore mollitia nemo rem quam, corporis sit rerum laudantium perspiciatis consectetur nisi,
+        blanditiis ab odit suscipit beatae.</p>
     </div>
   </div>
 </body>
