--- a/Practice2/src/common-component.html
+++ b/Practice2/src/common-component.html
@@ -62,7 +62,7 @@
     <div class="container">
       <div class="item-container">
         <div class="item-image">
-          <img src="javascript:void(0)" alt="Item">
+          <img src="./assets/images/pexels-jonas-kakaroto-736230.jpg" alt="Item">
         </div>
         <h4 class="item-text-primary">Lulu Hoffman</h4>
         <p class="item-text-primary">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi ipsam neque culpa
@@ -78,7 +78,7 @@
     <h4>Features Common</h4>
     <div>
       <div class="item-image-primary">
-        <img src="javascript:void(0)" alt="Icon">
+        <img src="./assets/images/pexels-jonas-kakaroto-736230.jpg" alt="Icon">
       </div>
       <h4 class="item-text-primary">Responsive Layout</h4>
       <p class="item-text-secondary">Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi praesentium maiores
