--- a/Practice2/src/common-component.html
+++ b/Practice2/src/common-component.html
@@ -17,7 +17,7 @@
   </div>
   <div>
     <h4>Cards</h4>
-    <div class="card">
+    <div class="card card-primary">
       <div class="card-body">
         <h5 class="card-title card-title-primary">Silver</h5>
         <h4 class="card-text-number card-text-number-primary">$49</h4>
@@ -26,7 +26,7 @@
         <a href="javascript:void(0)" class="btn btn-primary">Purchase</a>
       </div>
     </div>
-    <div class="card">
+    <div class="card card-secondary">
       <div class="card-body">
         <h5 class="card-title card-title-secondary">Silver</h5>
         <h4 class="card-text-number card-text-number-secondary">$49</h4>
@@ -62,7 +62,7 @@
     <div class="container">
       <div class="item-container">
         <div class="item-image">
-          <img src="./assets/images/pexels-jonas-kakaroto-736230.jpg" alt="Item">
+          <img src="./assets/images/responsive.jpg" alt="Item">
         </div>
         <h4 class="item-text-primary">Lulu Hoffman</h4>
         <p class="item-text-primary">Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi ipsam neque culpa
@@ -78,7 +78,7 @@
     <h4>Features Common</h4>
     <div>
       <div class="item-image-primary">
-        <img src="./assets/images/pexels-jonas-kakaroto-736230.jpg" alt="Icon">
+        <img src="./assets/images/responsive.jpg" alt="Icon">
       </div>
       <h4 class="item-text-primary">Responsive Layout</h4>
       <p class="item-text-secondary">Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi praesentium maiores
