--- a/Practice2/src/common-component.html
+++ b/Practice2/src/common-component.html
@@ -15,7 +15,7 @@
     <button type="button" class="btn btn-primary">Purchase</button>
     <button type="button" class="btn btn-secondary">Purchase</button>
   </div>
-  <div class="card-test">
+  <div class="card-common">
     <h4>Cards</h4>
     <div class="card card-primary">
       <div class="card-body">
@@ -36,7 +36,7 @@
         <div class="card-text-number card-text-number-secondary">
           <span class="dollar">$</span>99
         </div>
-        <h5 class="card-title card-title-success">Year</h5>
+        <h5 class="card-title card-title-dark">Year</h5>
         <p class="card-text card-text-secondary">Personal account ....</p>
         <p class="card-text card-text-secondary">Personal account ....</p>
         <p class="card-text card-text-secondary">Personal account ....</p>
@@ -54,7 +54,7 @@
         <a class="nav-link nav-link-success" href="javascript:void(0)">Airlines</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link nav-link-success" href="javascript:void(0)">Vacation</a>
+        <a class="nav-link nav-link-success" href="javascript:void(0)">Vacations</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="javascript:void(0)">Find more</a>
@@ -79,7 +79,7 @@
         <div class="item-icon">
           <img src="./assets/images/Fill 1.png" alt="Icon" class="item-icon-success">
           <img src="./assets/images/Fill 1.png" alt="Icon" class="item-icon-success">
-          <img src="./assets/images/Fill 1.png" alt="Icon">
+          <img src="./assets/images/Fill 1.png" alt="Icon" class="item-icon-success">
         </div>
       </div>
     </div>
