--- a/Practice2/src/common-component.html
+++ b/Practice2/src/common-component.html
@@ -15,32 +15,34 @@
     <button type="button" class="btn btn-primary">Purchase</button>
     <button type="button" class="btn btn-secondary">Purchase</button>
   </div>
-  <div class="card-common">
+  <div>
     <h4>Cards</h4>
-    <div class="card card-primary">
-      <div class="card-body">
-        <h5 class="card-title card-title-primary">Silver</h5>
-        <div class="card-text-number card-text-number-primary">
-          <span class="dollar">$</span>49
+    <div class="card-common">
+      <div class="card card-primary">
+        <div class="card-body">
+          <h5 class="card-title card-title-primary">Silver</h5>
+          <div class="card-text-number card-text-number-primary">
+            <span class="dollar">$</span>49
+          </div>
+          <h5 class="card-title card-title-success">Year</h5>
+          <p class="card-text card-text-primary">Personal account ....</p>
+          <p class="card-text card-text-primary">Personal account ....</p>
+          <p class="card-text card-text-primary">Personal account ....</p>
+          <a href="javascript:void(0)" class="btn btn-primary btn-card-text">Purchase</a>
         </div>
-        <h5 class="card-title card-title-success">Year</h5>
-        <p class="card-text card-text-primary">Personal account ....</p>
-        <p class="card-text card-text-primary">Personal account ....</p>
-        <p class="card-text card-text-primary">Personal account ....</p>
-        <a href="javascript:void(0)" class="btn btn-primary btn-card-text">Purchase</a>
       </div>
-    </div>
-    <div class="card card-secondary">
-      <div class="card-body">
-        <h5 class="card-title card-title-secondary">Silver</h5>
-        <div class="card-text-number card-text-number-secondary">
-          <span class="dollar">$</span>99
+      <div class="card card-secondary">
+        <div class="card-body">
+          <h5 class="card-title card-title-secondary">Silver</h5>
+          <div class="card-text-number card-text-number-secondary">
+            <span class="dollar">$</span>99
+          </div>
+          <h5 class="card-title card-title-dark">Year</h5>
+          <p class="card-text card-text-secondary">Personal account ....</p>
+          <p class="card-text card-text-secondary">Personal account ....</p>
+          <p class="card-text card-text-secondary">Personal account ....</p>
+          <a href="javascript:void(0)" class="btn btn-secondary btn-card-text">Purchase</a>
         </div>
-        <h5 class="card-title card-title-dark">Year</h5>
-        <p class="card-text card-text-secondary">Personal account ....</p>
-        <p class="card-text card-text-secondary">Personal account ....</p>
-        <p class="card-text card-text-secondary">Personal account ....</p>
-        <a href="javascript:void(0)" class="btn btn-secondary btn-card-text">Purchase</a>
       </div>
     </div>
   </div>
@@ -63,15 +65,16 @@
   </div>
   <div>
     <h4>Inputs</h4>
-    <input type="email" class="search" placeholder="email*">
+    <input type="email" class="search" placeholder="Email*">
   </div>
   <div>
     <h4>Grid</h4>
     <div class="item-container">
       <img src="./assets/images/responsive.jpg" alt="Item" class="item-image">
-      <div>
+      <div class="item-text-flex">
         <h4 class="item-text item-text-primary">Lulu Hoffman</h4>
         <p class="item-text item-text-secondary">Marketing Consultant at okodesign.net</p>
+        <div class="underline">ádasdasdsa</div>
         <p class="item-text-success">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Adipisci consectetur
           saepe reiciendis quas fugiat eos aspernatur blanditiis architecto vel ab harum nisi odit ducimus itaque,
           iure
@@ -84,21 +87,21 @@
       </div>
     </div>
   </div>
-  <div>
-    <h4>Features Common</h4>
-    <div class="item-features-container">
-      <img src="./assets/images/responsive.jpg" alt="Icon" class="item-features-image">
-      <div>
-        <h4 class="item-features-text item-features-text-primary">
-          Reponsive Layout
-        </h4>
-        <p class="item-features-text item-features-text-secondary">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate deleniti culpa rerum, mollitia autem
-          tempora debitis suscipit, similique ab error voluptatem dignissimos atque dolore dolores eius corrupti earum
-          quas! Ullam!
-        </p>
+    <div>
+      <h4>Features Common</h4>
+      <div class="item-features-container">
+        <img src="./assets/images/responsive.jpg" alt="Icon" class="item-features-image">
+        <div>
+          <h4 class="item-features-text item-features-text-primary">
+            Reponsive Layout
+          </h4>
+          <p class="item-features-text item-features-text-secondary">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate deleniti culpa rerum, mollitia autem
+            tempora debitis suscipit, similique ab error voluptatem dignissimos atque dolore dolores eius corrupti earum
+            quas! Ullam!
+          </p>
+        </div>
       </div>
     </div>
-  </div>
 </body>
 </html>
