--- a/Practice2/src/common-component.html
+++ b/Practice2/src/common-component.html
@@ -10,44 +10,45 @@
 </head>
 
 <body>
-  <div>
-    <h4>Buttons</h4>
+  <h1 class="heading">Practice Common Component</h1>
+  <div class="common">
+    <h4 class="sub-heading">Buttons</h4>
     <button type="button" class="btn btn-primary">Purchase</button>
     <button type="button" class="btn btn-secondary">Purchase</button>
   </div>
-  <div>
-    <h4>Cards</h4>
+  <div class="common">
+    <h4 class="sub-heading">Cards</h4>
     <div class="card-common">
       <div class="card card-primary">
         <div class="card-body">
           <h5 class="card-title card-title-primary">Silver</h5>
-          <div class="card-text-number card-text-number-primary">
-            <span class="dollar">$</span>49
+          <div class="plan-price plan-price-primary">
+            <span class="currency">$</span>49
           </div>
-          <h5 class="card-title card-title-success">Year</h5>
+          <h5 class="plan-year plan-year-primary">Year</h5>
           <p class="card-text card-text-primary">Personal account ....</p>
           <p class="card-text card-text-primary">Personal account ....</p>
           <p class="card-text card-text-primary">Personal account ....</p>
-          <a href="javascript:void(0)" class="btn btn-primary btn-card-text">Purchase</a>
+          <a href="javascript:void(0)" class="btn btn-primary plan-purchase">Purchase</a>
         </div>
       </div>
       <div class="card card-secondary">
         <div class="card-body">
           <h5 class="card-title card-title-secondary">Silver</h5>
-          <div class="card-text-number card-text-number-secondary">
-            <span class="dollar">$</span>99
+          <div class="plan-price plan-price-secondary">
+            <span class="currency">$</span>99
           </div>
-          <h5 class="card-title card-title-dark">Year</h5>
+          <h5 class="plan-year plan-year-secondary">Year</h5>
           <p class="card-text card-text-secondary">Personal account ....</p>
           <p class="card-text card-text-secondary">Personal account ....</p>
           <p class="card-text card-text-secondary">Personal account ....</p>
-          <a href="javascript:void(0)" class="btn btn-secondary btn-card-text">Purchase</a>
+          <a href="javascript:void(0)" class="btn btn-secondary plan-purchase">Purchase</a>
         </div>
       </div>
     </div>
   </div>
-  <div>
-    <h4>Navs</h4>
+  <div class="common">
+    <h4 class="sub-heading">Navs</h4>
     <ul class="nav">
       <li class="nav-item">
         <a class="nav-link nav-link-success" href="javascript:void(0)">Hotels</a>
@@ -63,45 +64,60 @@
       </li>
     </ul>
   </div>
-  <div>
-    <h4>Inputs</h4>
+  <div class="common">
+    <h4 class="sub-heading">Inputs</h4>
     <input type="email" class="search" placeholder="Email*">
   </div>
-  <div>
-    <h4>Grid</h4>
-    <div class="item-container">
-      <img src="./assets/images/responsive.jpg" alt="Item" class="item-image">
-      <div class="item-text-flex">
-        <h4 class="item-text item-text-primary">Lulu Hoffman</h4>
-        <p class="item-text item-text-secondary">Marketing Consultant at okodesign.net</p>
-        <div class="underline">ádasdasdsa</div>
-        <p class="item-text-success">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Adipisci consectetur
+  <div class="common">
+    <h4 class="sub-heading">Grid</h4>
+    <div class="media">
+      <img src="./assets/images/person.png" alt="Item" class="thumbnail">
+      <div class="media-body">
+        <h4 class="media-title media-title-success">Lulu Hoffman</h4>
+        <p class="media-title media-sub-title">Marketing Consultant at okodesign.net</p>
+        <div class="underline"></div>
+        <p class="media-description">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Adipisci consectetur
           saepe reiciendis quas fugiat eos aspernatur blanditiis architecto vel ab harum nisi odit ducimus itaque,
           iure
           quam quae similique earum!</p>
-        <div class="item-icon">
-          <img src="./assets/images/Fill 1.png" alt="Icon" class="item-icon-success">
-          <img src="./assets/images/Fill 1.png" alt="Icon" class="item-icon-success">
-          <img src="./assets/images/Fill 1.png" alt="Icon" class="item-icon-success">
+        <div class="media-social">
+          <img src="./assets/images/Fill 1.png" alt="Icon" class="media-link">
+          <img src="./assets/images/Fill 1.png" alt="Icon" class="media-link">
+          <img src="./assets/images/Fill 1.png" alt="Icon" class="media-link">
+        </div>
+      </div>
+      <img src="./assets/images/person.png" alt="Item" class="thumbnail">
+      <div class="media-body">
+        <h4 class="media-title media-title-success">Lulu Hoffman</h4>
+        <p class="media-title media-sub-title">Marketing Consultant at okodesign.net</p>
+        <div class="underline"></div>
+        <p class="media-description">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Adipisci consectetur
+          saepe reiciendis quas fugiat eos aspernatur blanditiis architecto vel ab harum nisi odit ducimus itaque,
+          iure
+          quam quae similique earum!</p>
+        <div class="media-social">
+          <img src="./assets/images/Fill 1.png" alt="Icon" class="media-link">
+          <img src="./assets/images/Fill 1.png" alt="Icon" class="media-link">
+          <img src="./assets/images/Fill 1.png" alt="Icon" class="media-link">
         </div>
       </div>
     </div>
   </div>
-    <div>
-      <h4>Features Common</h4>
-      <div class="item-features-container">
-        <img src="./assets/images/responsive.jpg" alt="Icon" class="item-features-image">
-        <div>
-          <h4 class="item-features-text item-features-text-primary">
-            Reponsive Layout
-          </h4>
-          <p class="item-features-text item-features-text-secondary">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate deleniti culpa rerum, mollitia autem
-            tempora debitis suscipit, similique ab error voluptatem dignissimos atque dolore dolores eius corrupti earum
-            quas! Ullam!
-          </p>
-        </div>
+  <div class="common">
+    <h4 class="sub-heading">Features Common</h4>
+    <div class="media-features">
+      <img src="./assets/images/responsive.jpg" alt="Icon" class="media-features-thumbnail">
+      <div>
+        <h4 class="media-text media-title-features">
+          Reponsive Layout
+        </h4>
+        <p class="media-text media-text-success">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate deleniti culpa rerum, mollitia autem
+          tempora debitis suscipit, similique ab error voluptatem dignissimos atque dolore dolores eius corrupti earum
+          quas! Ullam!
+        </p>
       </div>
     </div>
+  </div>
 </body>
 </html>
