--- a/Practice2/src/common-component.html
+++ b/Practice2/src/common-component.html
@@ -71,6 +71,7 @@
   <div class="common">
     <h4 class="sub-heading">Grid</h4>
     <div class="media">
+      <div>
       <img src="./assets/images/person.png" alt="Item" class="thumbnail">
       <div class="media-body">
         <h4 class="media-title media-title-success">Lulu Hoffman</h4>
@@ -86,6 +87,8 @@
           <img src="./assets/images/Fill 1.png" alt="Icon" class="media-link">
         </div>
       </div>
+    </div>
+    <div>
       <img src="./assets/images/person.png" alt="Item" class="thumbnail">
       <div class="media-body">
         <h4 class="media-title media-title-success">Lulu Hoffman</h4>
@@ -101,6 +104,7 @@
           <img src="./assets/images/Fill 1.png" alt="Icon" class="media-link">
         </div>
       </div>
+    </div>
     </div>
   </div>
   <div class="common">
