--- a/Practice2/src/common-component.html
+++ b/Practice2/src/common-component.html
@@ -71,7 +71,24 @@
   <div class="common">
     <h4 class="sub-heading">Grid</h4>
     <div class="media">
-      <div>
+    <div class="media-sub">
+      <img src="./assets/images/person.png" alt="Item" class="thumbnail">
+      <div class="media-body">
+        <h4 class="media-title media-title-success">Lulu Hoffman</h4>
+        <p class="media-title media-sub-title">Marketing Consultant at okodesign.net</p>
+        <div class="underline"></div>
+        <p class="media-description">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Adipisci consectetur
+          saepe reiciendis quas fugiat eos aspernatur blanditiis architecto vel ab harum nisi odit ducimus itaque,
+          iure
+          quam quae similique earum!</p>
+        <div class="media-social">
+          <img src="./assets/images/Fill 1.png" alt="Icon" class="media-link">
+          <img src="./assets/images/Fill 1.png" alt="Icon" class="media-link">
+          <img src="./assets/images/Fill 1.png" alt="Icon" class="media-link">
+        </div>
+    </div>
+  </div>
+    <div class="media-sub">
       <img src="./assets/images/person.png" alt="Item" class="thumbnail">
       <div class="media-body">
         <h4 class="media-title media-title-success">Lulu Hoffman</h4>
@@ -88,24 +105,7 @@
         </div>
       </div>
     </div>
-    <div>
-      <img src="./assets/images/person.png" alt="Item" class="thumbnail">
-      <div class="media-body">
-        <h4 class="media-title media-title-success">Lulu Hoffman</h4>
-        <p class="media-title media-sub-title">Marketing Consultant at okodesign.net</p>
-        <div class="underline"></div>
-        <p class="media-description">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Adipisci consectetur
-          saepe reiciendis quas fugiat eos aspernatur blanditiis architecto vel ab harum nisi odit ducimus itaque,
-          iure
-          quam quae similique earum!</p>
-        <div class="media-social">
-          <img src="./assets/images/Fill 1.png" alt="Icon" class="media-link">
-          <img src="./assets/images/Fill 1.png" alt="Icon" class="media-link">
-          <img src="./assets/images/Fill 1.png" alt="Icon" class="media-link">
-        </div>
-      </div>
-    </div>
-    </div>
+  </div>
   </div>
   <div class="common">
     <h4 class="sub-heading">Features Common</h4>
