Update tab-size folders, rename class

--- a/Practice2/src/common-component.html
+++ b/Practice2/src/common-component.html
@@ -70,8 +70,8 @@
   </div>
   <div class="common">
     <h4 class="sub-heading">Grid</h4>
+    <div class="list-unstyled">
     <div class="media">
-    <div class="media-sub">
       <img src="./assets/images/person.png" alt="Item" class="thumbnail">
       <div class="media-body">
         <h4 class="media-title media-title-success">Lulu Hoffman</h4>
@@ -88,7 +88,7 @@
         </div>
     </div>
   </div>
-    <div class="media-sub">
+    <div class="media">
       <img src="./assets/images/person.png" alt="Item" class="thumbnail">
       <div class="media-body">
         <h4 class="media-title media-title-success">Lulu Hoffman</h4>
