--- a/Practice2/src/index.html
+++ b/Practice2/src/index.html
@@ -10,7 +10,36 @@
 </head>
 
 <body>
-  <section>
-  </section>
+  <div>
+    <!-- Implement Top Section -->
+    <include src="./partials/top-section.html"></include>
+
+    <!-- Implement Feature Section -->
+    <include src="./partials/features-section.html"></include>
+
+    <!-- Implement Version Section -->
+    <include src="./partials/version-section.html"></include>
+
+    <!-- Implement Testimonials Section -->
+    <include src="./partials/testimonials-section.html"></include>
+
+    <!-- Implement Choose Your Plan Section -->
+    <include src="./partials/choose-your-plan-section.html"></include>
+
+    <!-- Implement Portfolio Section -->
+    <include src="./partials/portfolio-section.html"></include>
+
+    <!-- Implement Gregory Section -->
+    <include src="./partials/gregory-section.html"></include>
+
+    <!-- Implement Stay In Touch Section -->
+    <include src="./partials/stay-in-touch-section.html"></include>
+
+    <!-- Implement Map Section -->
+    <include src="./partials/map-section.html"></include>
+
+    <!-- Implement Bot Section -->
+    <include src="./partials/bot-section.html"></include>
+  </div>
 </body>
 </html>
