--- a/Practice2/src/index.html
+++ b/Practice2/src/index.html
@@ -12,5 +12,7 @@
 <body>
     <!-- Implement Top Section -->
     <include src="partials/top-section.html"></include>
+    <!-- Implement Features Section -->
+    <include src="partials/features-section.html"></include>
 </body>
 </html>
