Update features-section.html, features.css, naming class

--- a/Practice2/src/common-component.html
+++ b/Practice2/src/common-component.html
@@ -112,7 +112,7 @@
     <div class="media-features">
       <img src="./assets/images/features-sub-primary.jpg" alt="Icon" class="media-features-thumbnail">
       <div>
-        <h4 class="media-text media-title-features">
+        <h4 class="media-text media-heading">
           Reponsive Layout
         </h4>
         <p class="media-text media-text-success">
