--- a/Practice2/src/index.html
+++ b/Practice2/src/index.html
@@ -14,5 +14,7 @@
     <include src="partials/top-section.html"></include>
     <!-- Implement Features Section -->
     <include src="partials/features-section.html"></include>
+    <!-- Implement Version Section -->
+    <include src="partials/version-section.html"></include>
 </body>
 </html>
