--- a/Practice2/src/index.html
+++ b/Practice2/src/index.html
@@ -16,5 +16,7 @@
     <include src="partials/features-section.html"></include>
     <!-- Implement Version Section -->
     <include src="partials/version-section.html"></include>
+    <!-- Implement Testimonials Section -->
+    <include src="partials/testimonials-section.html"></include>
 </body>
 </html>
