--- a/Practice2/src/index.html
+++ b/Practice2/src/index.html
@@ -18,5 +18,7 @@
     <include src="partials/version-section.html"></include>
     <!-- Implement Testimonials Section -->
     <include src="partials/testimonials-section.html"></include>
-</body>
+    <!-- Implement Choose Your Plan Section -->
+    <include src="partials/choose-your-plan-section.html"></include>
+  </body>
 </html>
