--- a/Practice2/src/index.html
+++ b/Practice2/src/index.html
@@ -20,5 +20,7 @@
     <include src="partials/testimonials-section.html"></include>
     <!-- Implement Choose Your Plan Section -->
     <include src="partials/choose-your-plan-section.html"></include>
+    <!-- Implement Portfolio Section -->
+    <include src="partials/portfolio-section.html"></include>
   </body>
 </html>
