--- a/Practice2/src/index.html
+++ b/Practice2/src/index.html
@@ -22,5 +22,7 @@
     <include src="partials/choose-your-plan-section.html"></include>
     <!-- Implement Portfolio Section -->
     <include src="partials/portfolio-section.html"></include>
+    <!-- Implement Gregory Section -->
+    <include src="partials/gregory-section.html"></include>
   </body>
 </html>
