--- a/Practice2/src/index.html
+++ b/Practice2/src/index.html
@@ -24,5 +24,7 @@
     <include src="partials/portfolio-section.html"></include>
     <!-- Implement Gregory Section -->
     <include src="partials/gregory-section.html"></include>
+    <!-- Implement Stay In Touch Section -->
+    <include src="partials/stay-in-touch-section.html"></include>
   </body>
 </html>
