--- a/Practice2/src/index.html
+++ b/Practice2/src/index.html
@@ -26,5 +26,7 @@
     <include src="partials/gregory-section.html"></include>
     <!-- Implement Stay In Touch Section -->
     <include src="partials/stay-in-touch-section.html"></include>
+    <!-- Implement Map Section -->
+    <include src="partials/map-section.html"></include>
   </body>
 </html>
