--- a/Practice2/src/index.html
+++ b/Practice2/src/index.html
@@ -28,5 +28,7 @@
     <include src="partials/stay-in-touch-section.html"></include>
     <!-- Implement Map Section -->
     <include src="partials/map-section.html"></include>
+    <!-- Implement Bot Section -->
+    <include src="partials/bot-section.html"></include>
   </body>
 </html>
